public/css/site.css
.bodyColor {
	background: #dddfd4;
}

.logo {
  font-family: 'Quicksand', sans-serif;
  color: #ffffff;
}


.footer-distributed{
	background-color: #292c2f;
	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
	box-sizing: border-box;
	width: 100%;
	text-align: left;
	font: normal 16px sans-serif;

	padding: 45px 50px;
	margin-top: 80px;
}

.footer-distributed .footer-left p{
	color:  #808387;
	font-size: 12px;
	margin: 0;
}


/* state links */
.footer-distributed p.footer-links{
	font-size:14px;
	font-weight: bold;
	color:  #ffffff;
	margin: 0 0 10px;
	padding: 0;
}

.footer-distributed p.footer-links a{
	display:inline-block;
	line-height: 1.8;
	text-decoration: none;
	color:  inherit;
}

/*social media logos*/
/*.footer-distributed .footer-right .list-group-item {
padding-top:10px;
}*/

.footer-distributed .footer-right{
	float: right;
	margin-bottom: 10px;
	max-width: 200px;
	color: #ffffff;
	font-weight: bold;
	font-size: 14px;
}

.footer-distributed .footer-right a{
	display: inline-block;
	width: 33px;
	height: auto;
	margin-bottom: 10px;
	background-color:  #33383b;
	border-radius: 2px;

	font-size: 23px;
	color: #ffffff;
	text-align: center;
	line-height: 10px;
}

/*.footer-distributed .footer-right{
	float: right;
	margin-top: 6px;
	margin-bottom: 60px;
	max-width: 180px;
	color: #ffffff;
	font-weight: bold;
	font-size: 14px;
	width:30px;
	padding-right:50px;
}*/

/*.footer-distributed .footer-right a{*/
	/*display: inline-block;
	width: 35px;
	height: 35px;
	background-color:  #33383b;
	border-radius: 2px;


	font-size: 23px;
	color: #ffffff;
	text-align: center;
	line-height: 35px;



	margin-left:3px;
}*/


@media (max-width: 600px) {

	.footer-distributed .footer-left,
	.footer-distributed .footer-right{
		text-align: center;
	}

	.footer-distributed .footer-right{
		float: none;
		margin: 0 auto 20px;
	}

	.footer-distributed .footer-left p.footer-links{
		line-height: 1.8;
	}
}

/*Round buttons for sharing content to linkedin, twitter, fb and google+*/
.social-btn{
    display:inline-block;
    width:30px;
    height:30px;
    line-height:30px;
    border: 2px solid #f5f5f5;
    border-radius: 50%;
    color:#f5f5f5;
    text-align:center;
    text-decoration:none;
    /*background-color: white;*/
    box-shadow: 0 0 3px gray;
    font-size: 1em;
    overflow:hidden;
    font-weight:bold;
}

.social-btn:hover {
    background: #262626;
}

#linkedin{
  background-color: #4875B4;
}

#facebook{
  background-color: #3B5998;
}

#twitter{
  background-color: #33CCFF;
}

#google{
  background-color: #C63D2D;
}

#linkedin:hover{
  background-color: #395d90;
}

#facebook:hover{
  background-color: #2d4373;
}

#twitter:hover{
  background-color: #33aaff;
}

#google:hover{
  background-color: #b13728;
}




/*--- login social buttons -----*/


a[class*="entypo-"]:before {
	font-family: 'entypo', sans-serif;
}

 /*---------- GENERAL ----------*/

/* ---------- SOCIAL ---------- */


a {
	text-decoration: none;
}

ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.social {
	position: relative;
	height: 3em;
	width: 13.5em;
}

.social li {
	display: block;
	height: 4em;
	line-height: 4em;
	margin: -2.2em;
	position: absolute;
	-webkit-transition: -webkit-transform .7s;
	-moz-transition: -moz-transform .7s;
	-ms-transition: -ms-transform .7s;
	-o-transition: -o-transform .7s;
	transition: transform .7s;
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	transform: rotate(45deg);
	text-align: center;
	width: 4em;
}

.social a {
	color: #fffdf0;
	display: block;
	height: 4em;
	line-height: 4em;
	text-align: center;
	-webkit-transform: rotate(-45deg);
	-moz-transform: rotate(-45deg);
	-ms-transform: rotate(-45deg);
	-o-transform: rotate(-45deg);
	transform: rotate(-45deg);
	width: 4em;
}

.social li:hover {
  -webkit-transform: scale(1.3,1.3) rotate(45deg);
	-moz-transform: scale(1.3,1.3) rotate(45deg);
  -ms-transform: scale(1.3,1.3) rotate(45deg);
	-o-transform: scale(1.3,1.3) rotate(45deg);
  transform: scale(1.3,1.3) rotate(45deg);
}

.facebook {
	background: #155b9d;
	left: 0;
	top: 0%;
}

.twitter {
	background: #1a9ec4;
	bottom: 0;
	left: 25%;
}

.login {
	background: #d05f8f;
	left: 50%;
	top: 0%;
}

.register {
	background: #3f7aa3;
	bottom: 0;
	left: 75%;
}

.linked-in {
	background: #157f9d;
	left: 100%;
	top: 0%;
}

md-sidenav {
	width: 310px;
min-width: 310px;
max-width: 310px;
}

.si-wrapper input {
	font-size: 2em;
	padding: .1em;
}

.button {
    background: -webkit-linear-gradient(top,#008dfd 0,#0370ea 100%);
    border: 1px solid #076bd2;
    border-radius: 3px;
    color: #fff;
    display: none;
    font-size: 13px;
    font-weight: bold;
    line-height: 1.3;
    padding: 8px 25px;
    text-align: center;
    text-shadow: 1px 1px 1px #076bd2;
    letter-spacing: normal;
  }
  .center {
    padding: 10px;
    text-align: center;
  }
  .final {
    color: black;
    padding-right: 3px;
  }
  .interim {
    color: gray;
  }
  .info {
    font-size: 14px;
    text-align: center;
    color: #777;
    display: none;
  }
  .right {
    float: right;
  }
  .sidebyside {
    display: inline-block;
    width: 45%;
    min-height: 40px;
    text-align: left;
    vertical-align: top;
  }
  #headline {
    font-size: 40px;
    font-weight: 300;
  }
  #info {
    font-size: 20px;
    text-align: center;
    color: #777;
    visibility: hidden;
  }
  #results {
    font-size: 14px;
    font-weight: bold;
    border: 1px solid #ddd;
    padding: 15px;
    text-align: left;
    min-height: 150px;
  }
  #start_button {
    border: 0;
    background-color:transparent;
    padding: 0;
  }


md-tabs.md-default-theme.md-primary, md-tabs.md-primary > md-tabs-wrapper {
	background-color: #0d6666;
}

.chart {
    background: #eee;
    padding: 3px;

}

.chart div {
  width: 0;
  transition: all 1s ease-out;
  -moz-transition: all 1s ease-out;
  -webkit-transition: all 1s ease-out;
}

.chart div {
  font: 10px sans-serif;
  background-color: steelblue;
  text-align: right;
  padding: 3px;
  margin: 5px;
  color: white;
  box-shadow: 2px 2px 2px #666;
}

.yeah {
	display: inline;
}

